	instead of calling `twittering-get-tweets'. The function also
	calculates how many tweets should be retrieved.
	(twittering-update-lambda): use `twittering-call-api' instead of
	calling `twittering-http-post' directly.
	(twittering-update-jojo): likewise.
	(twittering-native-retweet): likewise.
	(twittering-follow): use `twittering-call-api'.
	(twittering-favorite): likewise.

2010-05-08  Takashi Masuda  <masutaka@nifty.com>

	* twittering-mode.el (twittering-update-jojo): 自分のツイートには返
	信しないようにした。
	* twittering-mode.el (twittering-update-jojo): do not reply to
	tweets posted by the current user itself.

2010-05-08  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-jojo-mode-p): confirm that the
	buffer has not been killed.

2010-05-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix the format specifier "%r" for direct
	message.
	(twittering-status-to-status-datum): add `recipient-screen-name'
	as a element of a status.
	(twittering-xmltree-to-status): store `recipient_screen_name'
	without modificaiton.
	(twittering-generate-status-formater-base): replace "%r" with
	`recipient-screen-name' if it exists.

2010-05-05  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Use a dummy buffer to prevent the cursor
	from moving without intention after invoking `url-retrieve'.
	(twittering-url-request-dummy-buffer-name): new constant for dummy
	buffer.
	(twittering-resolve-url-request): switch to the dummy buffer just
	after killing the content buffer generated by `url-retrieve'. This
	prevents multiple threads from having different cursor points for
	the same buffer.

2010-05-05  Takashi Masuda  <masutaka@nifty.com>

	* twittering-mode.el: twittering-jojo-mode の判定ミスを修正。
	(twittering-add-statuses-to-timeline-data): 判定方法を変更した。
	(twittering-jojo-mode-p): new function
	* twittering-mode.el: `twittering-jojo-mode' for each spec is
	correctly referred in order to decide whether to invoke
	`twittering-update-jojo'.